@@ -56,8 +56,8 @@ testwcharstringnorestart(void)
 {
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 199409L && !(defined(__SDCC_mcs51) && (defined(__SDCC_MODEL_SMALL) || defined(__SDCC_MODEL_MEDIUM))) && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Not enough memory
 	wchar_t wcs1[5] = L"Test";
-	wchar_t wcs2[5];
-	char mbs[5 * MB_LEN_MAX];
+	wchar_t wcs2[6];
+	char mbs[6 * MB_LEN_MAX];
 
 	// Test basic functionality
 	ASSERT(wcslen (wcs1) == 4);
@@ -67,12 +67,10 @@ testwcharstringnorestart(void)
 	ASSERT(wcs2[3] == L't');
 	ASSERT(!wcscmp(wcs1, wcs2));
 
-#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && ((__GNUC__ < 5) || (__GNUC__ == 5 && __GNUC_MINOR__ < 5)))
 	// Test for 0-terminated strings
-	ASSERT(wcstombs(mbs, wcs1, 1000) > 0);
-	ASSERT(mbstowcs(wcs2, mbs, 1000) > 0);
+	ASSERT(wcstombs(mbs, wcs1, sizeof(mbs)/sizeof(mbs[0])) > 0);
+	ASSERT(mbstowcs(wcs2, mbs, sizeof(wcs2)/sizeof(wcs2[0])) > 0);
 	ASSERT(!wcscmp(wcs1, wcs2));
-#endif
 
 	// Test for unterminated strings
 	mbs[2] = 0;
@@ -134,7 +132,7 @@ testchar16restart(void)
 	errno = 0;
 	ASSERT(c16rtomb(c, u'\0', 0) == 1);    // Converting a 0 character resets internal state.
 
-#ifdef __SDCC // The stadnard was defective (fixed in C2X). SDCC always behaves according to the fixed standard.
+#ifdef __SDCC // The standard was defective (fixed in C2X). SDCC always behaves according to the fixed standard.
 	ASSERT(c16rtomb(c, 0xd800, 0) == 0);
 	ASSERT(c16rtomb(c, 0xd800, 0) == -1);  // Invalid: Unpaired UTF-16 surrogate.
 
